// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c69 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c5 {
  padding-right: 8px;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c21 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c37 {
  padding-right: 16px;
  padding-left: 16px;
}

.c39 {
  padding-left: 12px;
}

.c43 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c46 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c49 {
  background: #ffffff;
  padding: 16px;
}

.c68 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c50 {
  border-radius: 4px;
}

.c52 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c54 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c56 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c61 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c63 {
  color: #666687;
  width: 0.6875rem;
}

.c66 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c62 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  color: #4945ff;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c12 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c17 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c23 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c27 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c38 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c42 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c48 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c59 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c60 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 24px;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 16px;
}

.c26 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c26 > * + * {
  margin-top: 4px;
}

.c47 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c47 > * + * {
  margin-top: 8px;
}

.c13 > * {
  margin-left: 0;
  margin-right: 0;
}

.c13 > * + * {
  margin-left: 8px;
}

.c55 > * {
  margin-left: 0;
  margin-right: 0;
}

.c55 > * + * {
  margin-left: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c7 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c7 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,
.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,
.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c15:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c28 {
  line-height: 0;
}

.c30 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c30::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30[aria-disabled='true'] {
  color: inherit;
}

.c30:focus {
  outline: none;
  box-shadow: none;
}

.c29 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c29:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c64 path {
  fill: #666687;
}

.c35 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c35:focus {
  outline: none;
}

.c35[aria-disabled='true'] {
  cursor: not-allowed;
}

.c34 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c34:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c40 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c40 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c40 svg path {
  fill: #666687;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c41 svg {
  width: 0.375rem;
}

.c36 {
  width: 100%;
}

.c32 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c32:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c33 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c33::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33:focus-within {
  outline: none;
}

.c31 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c31 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c31 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c31 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c31 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c57 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c57[aria-disabled='true'] {
  pointer-events: none;
}

.c57[aria-disabled='true'] svg path {
  fill: #666687;
}

.c57 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c57 svg path {
  fill: #4945ff;
}

.c57:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c57:focus-visible {
  outline: none;
}

.c57:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:focus-visible {
  outline: none;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c44 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c25 {
  grid-column: span 6;
  max-width: 100%;
}

.c45 {
  grid-column: span 7;
  max-width: 100%;
}

.c67 {
  grid-column: span 5;
  max-width: 100%;
}

.c51 {
  border: 1px solid #f6f6f9;
}

.c51:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c51:hover:not([aria-disabled='true']) .sc-cOLXoO {
  color: #271fe0;
}

.c51:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c51:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c51:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c65 {
  border: 1px solid #ffffff;
}

.c65:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c65:hover:not([aria-disabled='true']) .sc-cOLXoO {
  color: #271fe0;
}

.c65:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c65:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c65:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c58 {
  text-align: left;
}

.c58 > span {
  max-width: 100%;
}

.c58 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c58 svg path {
  fill: #8e8ea9;
}

.c53 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c53:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c25 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c25 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c45 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c45 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c67 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c67 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c1 c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7 c8"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c9 c10"
          >
            <div
              class="c1 c9 c11"
            >
              <h1
                class="c7 c12"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c1 c9 c11 c13"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c14 c15"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c18"
      >
        <div
          class="c1 c9 c19 c20"
          spacing="6"
        >
          <div
            class="c1 c21"
          >
            <div
              class="c1 c9 c19 c22"
              spacing="4"
            >
              <h2
                class="c7 c23"
              >
                Details
              </h2>
              <div
                class="c1 c24"
              >
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c1 c9 c19 c26"
                          spacing="1"
                        >
                          <label
                            class="c7 c17"
                            for="textinput-1"
                            required=""
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              Name
                              <span
                                class="c7 c27 c28"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c1 c9 c10 c29"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c30"
                              id="textinput-1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c31"
                    >
                      <div>
                        <div
                          class="c1 c9 c19 c26"
                          spacing="1"
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            <label
                              class="c7 c17"
                              for="textarea-2"
                            >
                              <div
                                class="c1 c9 c11"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c32"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c33"
                              id="textarea-2"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c19 c26"
                        spacing="1"
                      >
                        <span
                          class="c7 c17"
                          for="select-3"
                          id="select-3-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token duration
                            <span
                              class="c7 c27 c28"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c34"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-3-label select-3-content"
                            class="c35"
                            id="select-3"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c36"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c37"
                              >
                                <span
                                  class="c7 c38"
                                  id="select-3-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c39 c40 c41"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c7 c42"
                    />
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c19 c26"
                        spacing="1"
                      >
                        <span
                          class="c7 c17"
                          for="select-4"
                          id="select-4-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token type
                            <span
                              class="c7 c27 c28"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c34"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-4-label select-4-content"
                            class="c35"
                            id="select-4"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c36"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c37"
                              >
                                <span
                                  class="c7 c38"
                                  id="select-4-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c39 c40 c41"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c43 c44"
          >
            <div
              class="c45"
            >
              <div
                class="c1 c46"
              >
                <div
                  class="c1 c9 c19 c47"
                  spacing="2"
                >
                  <h2
                    class="c7 c23"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c7 c48"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c49"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c50 c51"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c52 c10 c53"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c54 c11 c55"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-13"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-13"
                          class="c1 c9 c56 c11 c57 c58"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c59"
                          >
                            <span
                              class="c7 sc-cOLXoO c60"
                              id="accordion-label-accordion-13"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c55"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c61 c62"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c63 c64"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c50 c65"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c66 c10 c53"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c54 c11 c55"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-14"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-14"
                          class="c1 c9 c56 c11 c57 c58"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c59"
                          >
                            <span
                              class="c7 sc-cOLXoO c60"
                              id="accordion-label-accordion-14"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c55"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c61 c62"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c63 c64"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c67"
            >
              <div
                class="c1 c68"
                style="min-height: 100%;"
              >
                <div
                  class="c1 c9 c19 c47"
                  spacing="2"
                >
                  <h3
                    class="c7 c23"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c7 c48"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c69"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c78 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  padding-right: 8px;
}

.c19 {
  padding-right: 56px;
  padding-left: 56px;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c22 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c23 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c29 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c44 {
  padding-right: 16px;
  padding-left: 16px;
}

.c46 {
  padding-left: 12px;
}

.c53 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c56 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c58 {
  background: #ffffff;
  padding: 16px;
}

.c77 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c59 {
  border-radius: 4px;
}

.c61 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c63 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c65 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c70 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c72 {
  color: #666687;
  width: 0.6875rem;
}

.c75 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c20 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c71 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c8 {
  color: #4945ff;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c17 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c26 {
  font-weight: 500;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c28 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c31 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c34 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c45 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c49 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c51 {
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c68 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c69 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c21 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c21 > * + * {
  margin-top: 24px;
}

.c25 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c25 > * + * {
  margin-top: 4px;
}

.c30 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c30 > * + * {
  margin-top: 16px;
}

.c57 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c57 > * + * {
  margin-top: 8px;
}

.c13 > * {
  margin-left: 0;
  margin-right: 0;
}

.c13 > * + * {
  margin-left: 8px;
}

.c64 > * {
  margin-left: 0;
  margin-right: 0;
}

.c64 > * + * {
  margin-left: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c79 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c79 .c7 {
  color: #ffffff;
}

.c79[aria-disabled='true'] .c7 {
  color: #666687;
}

.c79[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c7 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c7 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,
.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,
.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  background-color: #f6f6f9;
}

.c15:active {
  background-color: #eaeaef;
}

.c15 .c7 {
  color: #32324d;
}

.c15 svg > g,
.c15 svg path {
  fill: #32324d;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c18 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 .c7 {
  color: #ffffff;
}

.c18[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true'] .c7 {
  color: #666687;
}

.c18[aria-disabled='true'] svg > g,
.c18[aria-disabled='true'] svg path {
  fill: #666687;
}

.c18[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c18[aria-disabled='true']:active svg > g,
.c18[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c18:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c18:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c18 svg > g,
.c18 svg path {
  fill: #ffffff;
}

.c35 {
  line-height: 0;
}

.c37 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c37::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c37::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c37:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c37::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c37[aria-disabled='true'] {
  color: inherit;
}

.c37:focus {
  outline: none;
  box-shadow: none;
}

.c36 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c36:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c73 path {
  fill: #666687;
}

.c42 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c42:focus {
  outline: none;
}

.c42[aria-disabled='true'] {
  cursor: not-allowed;
}

.c41 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c41:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c50 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c50:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c47 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c47 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c47 svg path {
  fill: #666687;
}

.c48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c48 svg {
  width: 0.375rem;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c52 svg {
  width: 0.375rem;
}

.c43 {
  width: 100%;
}

.c39 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c39:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c40 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c40::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40:focus-within {
  outline: none;
}

.c38 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c38 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c38 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c38 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c38 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c66 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c66[aria-disabled='true'] {
  pointer-events: none;
}

.c66[aria-disabled='true'] svg path {
  fill: #666687;
}

.c66 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c66 svg path {
  fill: #4945ff;
}

.c66:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c66:focus-visible {
  outline: none;
}

.c66:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c24 {
  margin-right: 24px;
}

.c24 svg {
  width: 2rem;
  height: 2rem;
}

.c27 {
  word-break: break-all;
}

.c0:focus-visible {
  outline: none;
}

.c32 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c54 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c33 {
  grid-column: span 6;
  max-width: 100%;
}

.c55 {
  grid-column: span 7;
  max-width: 100%;
}

.c76 {
  grid-column: span 5;
  max-width: 100%;
}

.c60 {
  border: 1px solid #f6f6f9;
}

.c60:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c60:hover:not([aria-disabled='true']) .sc-cOLXoO {
  color: #271fe0;
}

.c60:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c60:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c60:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c74 {
  border: 1px solid #ffffff;
}

.c74:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c74:hover:not([aria-disabled='true']) .sc-cOLXoO {
  color: #271fe0;
}

.c74:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c74:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c74:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c67 {
  text-align: left;
}

.c67 > span {
  max-width: 100%;
}

.c67 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c67 svg path {
  fill: #8e8ea9;
}

.c62 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c62:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c33 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c33 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c55 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c55 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c76 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c76 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c1 c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7 c8"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c9 c10"
          >
            <div
              class="c1 c9 c11"
            >
              <h1
                class="c7 c12"
              >
                My super token
              </h1>
            </div>
            <div
              class="c1 c9 c11 c13"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c14 c15"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0011.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 003.589-4.831 1.117 1.117 0 00-.664-1.418 1.086 1.086 0 00-1.393.676 7.769 7.769 0 01-2.792 3.758 7.546 7.546 0 01-4.41 1.428V4.222h.002a7.492 7.492 0 013.003.625 7.61 7.61 0 012.5 1.762l.464.551-2.986 3.042a.186.186 0 00.129.316H22V3.317a.188.188 0 00-.112-.172.179.179 0 00-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 00-3.239-2.293zm-3.863 1.418V2v2.222zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c14 c18"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c19"
      >
        <div
          class="c1 c9 c20 c21"
          spacing="6"
        >
          <div
            class="c1 c9 c22 c11"
          >
            <div
              class="c1 c9 c23 c11 c24"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c1 c9 c20 c25"
              spacing="1"
            >
              <div
                class="c1 c9 c11"
              >
                <span
                  class="c7 c26 c27"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c7 c28"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c1 c29"
          >
            <div
              class="c1 c9 c20 c30"
              spacing="4"
            >
              <h2
                class="c7 c31"
              >
                Details
              </h2>
              <div
                class="c1 c32"
              >
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c1 c9 c20 c25"
                          spacing="1"
                        >
                          <label
                            class="c7 c17"
                            for="textinput-28"
                            required=""
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              Name
                              <span
                                class="c7 c34 c35"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c1 c9 c10 c36"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c37"
                              id="textinput-28"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c38"
                    >
                      <div>
                        <div
                          class="c1 c9 c20 c25"
                          spacing="1"
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            <label
                              class="c7 c17"
                              for="textarea-29"
                            >
                              <div
                                class="c1 c9 c11"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c39"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c40"
                              id="textarea-29"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c20 c25"
                        spacing="1"
                      >
                        <span
                          class="c7 c17"
                          for="select-30"
                          id="select-30-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token duration
                            <span
                              class="c7 c34 c35"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c41"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-30-label select-30-content"
                            class="c42"
                            id="select-30"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c43"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c44"
                              >
                                <span
                                  class="c7 c45"
                                  id="select-30-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c46 c47 c48"
                                disabled=""
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c7 c49"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c20 c25"
                        spacing="1"
                      >
                        <span
                          class="c7 c17"
                          for="select-31"
                          id="select-31-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token type
                            <span
                              class="c7 c34 c35"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c50"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-31-label select-31-content"
                            class="c42"
                            id="select-31"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c43"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c44"
                              >
                                <span
                                  class="c7 c51"
                                  id="select-31-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c46 c47 c52"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c53 c54"
          >
            <div
              class="c55"
            >
              <div
                class="c1 c56"
              >
                <div
                  class="c1 c9 c20 c57"
                  spacing="2"
                >
                  <h2
                    class="c7 c31"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c7 c28"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c58"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c59 c60"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c61 c10 c62"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c63 c11 c64"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-42"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-42"
                          class="c1 c9 c65 c11 c66 c67"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c68"
                          >
                            <span
                              class="c7 sc-cOLXoO c69"
                              id="accordion-label-accordion-42"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c64"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c70 c71"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c72 c73"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c59 c74"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c75 c10 c62"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c63 c11 c64"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-43"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-43"
                          class="c1 c9 c65 c11 c66 c67"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c68"
                          >
                            <span
                              class="c7 sc-cOLXoO c69"
                              id="accordion-label-accordion-43"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c64"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c70 c71"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c72 c73"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c76"
            >
              <div
                class="c1 c77"
                style="min-height: 100%;"
              >
                <div
                  class="c1 c9 c20 c57"
                  spacing="2"
                >
                  <h3
                    class="c7 c31"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c7 c28"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c78"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
